@@ -20,6 +20,7 @@ dillo-3.3.0 [Unreleased]
  - Hide form elements (like buttons and inputs) with display:none in CSS.
  - Increase margin in location bar to make it easier to select with the mouse.
  - Navigate back and forward with mouse buttons.
+ - Fix OAuth login by allowing cookies in root 30X redirects.
    Patches: Rodrigo Arias Mallo
 +- Middle click on back or forward button opens page in new tab.
    Patches: Alex
